--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
         <img src="assets/images/img1.png" alt="" />
         <h2>BPM black 1.2</h2>
         <p>$12.00</p>
-        <button>add to cart <span class="material-symbols-outlined">shopping_cart</span></button>
+        <button><span>add to cart </span><span class="material-symbols-outlined">shopping_cart</span></button>
     </div>
       <div class="pdt-container">
         <img src="assets/images/img2.png" alt="" />
         <h2>BPM black 2.0</h2>
         <p>$18.00</p>
-        <button>add to cart<span class="material-symbols-outlined">shopping_cart</span></button>
+        <button><span>add to cart</span><span class="material-symbols-outlined">shopping_cart</span></button>
       </div>
       <div class="pdt-container">
         <img src="assets/images/img3.png" alt="" />
         <h2>Exos NBL 3.0</h2>
         <p>$22.00</p>
-        <button>add to cart<span class="material-symbols-outlined">shopping_cart</span></button>
+        <button><span>add to cart</span><span class="material-symbols-outlined">shopping_cart</span></button>
       </div>
       <div class="pdt-container">
         <img src="assets/images/img4.png" alt="" />
         <h2>Exos NBL 2.0</h2>
         <p>$19.00</p>
-        <button>add to cart<span class="material-symbols-outlined flex-disp">shopping_cart</span></button>
+        <button><span>add to cart</span><span class="material-symbols-outlined flex-disp">shopping_cart</span></button>
       </div>
     </div>
     <div class="heading flex-disp"><h1>Cart</h1></div>
