--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
       </div>
     </div>
     <div class="heading flex-disp"><h1>Cart</h1></div>
+   
 
     <div class="cart-section section flex-disp">
     </div>
-
+    <a href="product-display.html" class="link-to-pdt"><h2>to product-display->></h2></a>
   </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="scripts/cartScript.js"></script>
